[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/dynamic_fonts/Typecast.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/indicator.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/menuOption.gd" type="Script" id=3]

[node name="menuOption" type="TextureButton"]
margin_right = 61.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicator" type="TextureRect" parent="HBox"]
visible = false
margin_right = 8.0
margin_bottom = 13.0
rect_min_size = Vector2( 8, 8 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="option" type="Label" parent="HBox"]
modulate = Color( 0.870588, 0.921569, 0.827451, 1 )
margin_right = 60.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 13 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.921569, 0.827451, 1 )
[connection signal="focus_entered" from="." to="." method="_on_menuOption_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_menuOption_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_menuOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_menuOption_mouse_exited"]
